Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/BD_Job_Scheduler_Entry__c.object-meta.xml
<CustomObject>
    <label>Job Scheduler Entry</label>
    <nameField>
        <displayFormat>JOB-{00000}</displayFormat>
        <label>Job Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Scheduler Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>