Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/fields/BD_Anonymous_Code__c.field-meta.xml
<CustomField>
    <fullName>BD_Anonymous_Code__c</fullName>
    <label>Anonymous Code</label>
    <length>13000</length>
    <type>LongTextArea</type>
</CustomField>