Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/fields/BD_Async_Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>BD_Async_Apex_Job_Id__c</fullName>
    <label>Async Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>