Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/fields/BD_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>BD_Batch_Size__c</fullName>
    <label>Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>