Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/fields/BD_Class__c.field-meta.xml
<CustomField>
    <fullName>BD_Class__c</fullName>
    <label>Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>