Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/fields/BD_Daily_End__c.field-meta.xml
<CustomField>
    <fullName>BD_Daily_End__c</fullName>
    <label>Daily End</label>
    <type>Date</type>
</CustomField>