Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/fields/BD_Daily_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>BD_Daily_Start_Date_Time__c</fullName>
    <label>Daily Start Date / Time</label>
    <type>DateTime</type>
</CustomField>