Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/fields/BD_Descriptive_Name__c.field-meta.xml
<CustomField>
    <fullName>BD_Descriptive_Name__c</fullName>
    <label>Descriptive Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>