Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/fields/BD_End__c.field-meta.xml
<CustomField>
    <fullName>BD_End__c</fullName>
    <label>End</label>
    <type>DateTime</type>
</CustomField>