Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/fields/BD_Execution_Error__c.field-meta.xml
<CustomField>
    <fullName>BD_Execution_Error__c</fullName>
    <label>Execution Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>