Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/fields/BD_Flow__c.field-meta.xml
<CustomField>
    <fullName>BD_Flow__c</fullName>
    <label>Flow</label>
    <length>80</length>
    <type>Text</type>
</CustomField>