Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/fields/BD_Is_Daily__c.field-meta.xml
<CustomField>
    <fullName>BD_Is_Daily__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Daily</label>
    <type>Checkbox</type>
</CustomField>