Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/fields/BD_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>BD_Job_Status__c</fullName>
    <description>The status of the job. Change status to Canceled to manually end the job.</description>
    <inlineHelpText>The status of the job. Change status to Canceled to manually end the job.</inlineHelpText>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>