Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/fields/BD_Number_of_Executions__c.field-meta.xml
<CustomField>
    <fullName>BD_Number_of_Executions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Executions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>