Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/fields/BD_Repeat_Interval__c.field-meta.xml
<CustomField>
    <fullName>BD_Repeat_Interval__c</fullName>
    <label>Repeat Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>