Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/fields/BD_Start__c.field-meta.xml
<CustomField>
    <fullName>BD_Start__c</fullName>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>