Perkin-UAT/force-app/main/default/objects/BD_Job_Scheduler_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BD_Job_Status__c</columns>
    <columns>BD_Descriptive_Name__c</columns>
    <columns>BD_Daily_Start_Date_Time__c</columns>
    <columns>BD_Daily_End__c</columns>
    <columns>BD_Number_of_Executions__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>BD_Execution_Error__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>